--- a/miniprogram/pages/award/award.wxml
+++ b/miniprogram/pages/award/award.wxml
@@ -1,2 +1,2 @@
-<!--pages/award/award.wxml-->
-<text>pages/award/award.wxml</text>
+<text class="titleAward">Award</text>
+<input type="text" class="searchBox" placeholder="Search Award"/>
